--- a/report.Rmd
+++ b/report.Rmd
@@ -4,17 +4,18 @@ author: "Eric Sartor"
 date: "`r Sys.Date()`"
 header-includes:
   - \usepackage[numbers,sort&compress]{natbib}
-  - \usepackage{setspace}
+  - \usepackage{setspace}\doublespace
+  - \usepackage{url}
   - \DeclareMathOperator{\norm}{norm}
-output: pdf_document
+output: bookdown::pdf_document2
 bibliography: bibliography.bib
 csl: ieee.csl
 link-citations: true
 ---
 
-## Introduction
+# Introduction
 
-### Description of the Plague
+## Description of the Plague
 
 NOTES: please change the simulation back to normal when done. also return the DOWNLOAD FILES TO NORMAL
 
@@ -26,12 +27,12 @@ The disease is spread most commonly through the bite of an infected rat flea, th
   The recent digitization of a substantial volume of plague records @Buntgen.etalDigitizingHistoricalPlague2012 alongside new fine-grained population estimate rasters for pre-census periods through the HYDE project @kleingoldewijkAnthropogenicLandUse2017 allow for myriad novel analysis of the Second Pandemic. Through analysis of the characteristics and traits of the disease in a time when effective medical treatment for most diseases was completely unknown, further knowledge regarding societal responses to disease as well as the effect of unchecked disease on a population can be studied. Additionally, knowledge of the true severity of the disease throughout various regions of Europe can help to provide historical context for events and developments in the region throughout the Middle Ages. Furthermore, given the severity and gruesome nature of the disease, modelling its spread through and impact upon Medieval Europe may prove a sobering reminder of the potential severity of an incurable epidemic. 
   Therefore, the objective of this model is to attempt to model the yearly local impact of the Black Death throughout the whole of Europe, and in doing so to estimate crucial geographic characteristics of the epidemic. 
 
-### Data Sources
+## Data Sources
 
 * A digitized plague mentions dataset, including both mentions and well-known maritime trade routes @schmidSourceCodeDatasets2015 compiled for the paper "Climate-driven introduction of the Black Death and successive plague reintroductions into Europe" @schmidClimatedrivenIntroductionBlack2015
 * HYDE 3.2 @kleingoldewijkAnthropogenicLandUse2017, a monumental collection of rasters, encoding global environmental conditions and other information, including the most recent historical population and population density estimates currently available for pre-census periods. The rasters are available in 100-year intervals during the period of interest, at a resolution of 85km$^2$.
 * Approximate European borders shapefile for 1279 from a ThinkQuest educational web-site design competition held in 2000 @ThinkQuestTeamC006628TeachingHistoryGIS2000. While this data is entirely student-created and may present minor inaccuracies, as it is used simply for the purposes of aiding in visualization, this is not a major concern.
-* Basemap tilesets for visualization by Apple, through `tmaptools` @tennekesTmaptoolsThematicMap2021
+* Basemap tilesets for visualization by Apple, through `tmaptools` @TennekesTmapThematicMaps2018
 
 
 ```{r setup, include=FALSE, echo=FALSE}
@@ -76,7 +77,7 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, error = FAL
 ```
 
 
-```{r download_and_prep_data, echo=FALSE, include=FALSE}
+```{r downloadAndPrepData, echo=FALSE, include=FALSE}
 basemap = read_osm(bbox, type='apple-iphoto', mergeTiles=TRUE)
 #should maybe project these too if i go back to that
 
@@ -128,7 +129,7 @@ death_raster = ad1400_popc_rast - ad1300_popc_rast
 ```
 
 
-```{python process_plague_info, echo=FALSE}
+```{python processPlagueInfo, echo=FALSE}
 import re
 import os
 
@@ -143,7 +144,7 @@ if not (os.path.exists('./plague_reprocessed.json')):
 ```
 
 
-```{r read_plague_info, echo=FALSE}
+```{r readPlagueInfo, echo=FALSE}
 library(jsonlite)
 library(readr)
 
@@ -185,7 +186,7 @@ all_target_years = target_occurrences[which(target_occurrences$year <= 1400),]
 ```
 
 
-```{r garbage_collection, echo=FALSE, include=FALSE}
+```{r garbageCollection, echo=FALSE, include=FALSE}
 #just to clean up exec environment of tempvars. 
 #ik if i used more piping i wouldnt have to do this, but i don't care atm
 rm(plague_occurrence_ordered)
@@ -199,27 +200,27 @@ rm(json_lines)
 ```
 
 
-## Methods
+# Methods
 
-### Preliminary Work Motivating the Model
-\doublespacing
-  Unless otherwise specified, all analyses were performed using the R language @rcoreteamLanguageEnvironmentStatistical2023. 
-Firstly, a raster containing the population difference between 1300AD and 1400AD was computed. This raster, visible in Figure \@ref(fig:death_raster), is variously referred to in this report as the "death raster", or "population difference raster". It represents the loss or gain in population count in each cell over the 14th century as estimated by the HYDE. One would normally expect wholesale population growth, but as a result of the devastation wrought by the Second Pandemic, the population difference raster is mostly negative, with population gain generally only in more remote regions. 
+## Preliminary Work Motivating the Model
+
+  Unless otherwise specified, all analyses were performed using the R language @RCoreTeamLanguageEnvironmentStatistical2023. 
+Firstly, a raster containing the population difference between 1300AD and 1400AD was computed. This raster, visible in Figure \@ref(fig:deathRaster), is variously referred to in this report as the "death raster", or "population difference raster". It represents the loss or gain in population count in each cell over the 14th century as estimated by the HYDE. One would normally expect wholesale population growth, but as a result of the devastation wrought by the Second Pandemic, the population difference raster is mostly negative, with population gain generally only in more remote regions. 
 As a result of this, and given the generally small magnitude of the population gain, a model purely estimating deaths rather than attempting to include population gain as well was used to massively simplify the required calculation.
-\singlespacing
-  Next, in order to assess sanity of the outbreak data, as well as its correlation with the HYDE estimates, Poisson point process methods were used to generate an intensity (points per unit area) estimate for the outbreak data as a function of the death raster. Specifically, the outbreak data preceding 1400AD was interpreted as a single Poisson point process, and a nonparametric intensity estimate was taken through `spatstat`'s `rhohat` function @baddeleySpatstatPackageAnalyzing2005. Then, a raster was computed depicting the predicted intensity at every cell in the death raster, resulting in Figure \ref(fig:predicted_intensity_through_rhohat). This informed the usage of the outbreak data in general, providing confidence that it was correlated with deaths. Further, some authors cast doubt upon the usefulness of the Schmid et al. data, stating that it may be missing key outbreaks in Europe, as the intensity of the points in Northern Italy in their opinion did not align with other historical accounts @roosenDangersNoncriticalUse2018. This nonparametric analysis, however, finds a high intensity in the allegedly problematic regions, providing confidence that the usage of the outbreak data is not detrimental to the legitimacy of any results.
 
-  Additionally, it is significant that the death raster is quite similar to the population density raster for the year 1300AD, as the population difference raster is generated only using population count data: this explicitly points to population density as a key factor in the relationship. In order to further assess the nature of the relationship between population density and population difference, focal correlation between the two rasters was assessed using the `focalPairs` function available through `terra` @hijmansTerraSpatialData2023, and is visible in Figure \@ref(fig:focal_correlation_between_deaths_and_popd). While a negative correlation between population density and population growth was expected, the positive correlation found in some regions indicates that difficult-to-model factors such as migration may be present. (SAY more about this?) 
+  Next, in order to assess sanity of the outbreak data, as well as its correlation with the HYDE estimates, Poisson point process methods were used to generate an intensity (points per unit area) estimate for the outbreak data as a function of the death raster. Specifically, the outbreak data preceding 1400AD was interpreted as a single Poisson point process, and a nonparametric intensity estimate was taken through `spatstat`'s `rhohat` function @Baddeley.etalHybridsGibbsPoint2013. Then, a raster was computed depicting the predicted intensity at every cell in the death raster, resulting in Figure \@ref(fig:predictedIntensityThroughRhohat). This informed the usage of the outbreak data in general, providing confidence that it was correlated with deaths. Further, some authors cast doubt upon the usefulness of the Schmid et al. data, stating that it may be missing key outbreaks in Europe, as the intensity of the points in Northern Italy in their opinion did not align with other historical accounts @roosenDangersNoncriticalUse2018. This nonparametric analysis, however, finds a high intensity in the allegedly problematic regions, providing confidence that the usage of the outbreak data is not detrimental to the legitimacy of any results.
+
+  Additionally, it is significant that the death raster is quite similar to the population density raster for the year 1300AD, as the population difference raster is generated only using population count data: this explicitly points to population density as a key factor in the relationship. In order to further assess the nature of the relationship between population density and population difference, focal correlation between the two rasters was assessed using the `focalPairs` function available through `terra` @HijmansRasterGeographicData2023, and is visible in Figure \@ref(fig:focalCorrelationBetweenDeathsAndPopd).
 
 
-### Deterministic Model
+## Deterministic Model
 
   The model seeks to simulate the yearly impact of the plague per cell in Europe between the years 1300AD and 1400AD, using grid search to tune its hyperparameters. It runs on each outbreak year chronologically, generating rasters for every year that at least one plague outbreak is recorded in historical sources (in practice, this is every year between 1346AD and 1400AD). To assess how successful it has been in its estimation, it compares the final values it arrives at for the living population of Europe in 1400AD with those from the HYDE estimate for that year, as well as the sum of all yearly death estimates it has made with the population difference raster. This report will refer to the individual results generated through each comparison as a "submodel", and the methodology as a whole as the "model" or "system". Each submodel generates Pearson correlation coefficient values between its estimates and those made by the far more sophisticated HYDE, and chooses the set of hyperparameters which result in the greatest correlation.
   While technically a recursive algorithm, it is not implemented as such in order to save resources during processing. All generated rasters are identical in dimension to the population density and count rasters obtained through the HYDE, and no downscaling is performed. Additionally, all calculations are performed on unprojected data, as `terra`'s `distance` function is significantly more accurate with unprojected data than on projected data. 
 
-  Firstly, the outbreak points for ${year}$ are taken, and a raster $dist_{rast}$ is computed where the value of each pixel is inversely proportional to their distance from the closest outbreak according to $h = \exp({-m\norm{(ad^{x}})})$, where $d$ is the closest distance to an outbreak point returned for each pixel by `terra`'s `distance` function. $m$ $a$ and $x$ are scaling parameters for which various values are tested: $m$ scales the largest negative value that $e$ can be raised to, $a$ increases the area underneath the curve close to the $y$ axis by "lifting" the graph upwards, and $x$ disproportionately increases the value returned for pixels extremely close to the closest outbreak point. Effectively, $m$ and $a$ scale the overall range of an outbreak's effect, while $x$ scales the distance where the outbreak will be the most devastating. The $\norm{}$ function represents the uniform scaling, or normalization, of the raster's cell values to between 0.0 and 1.0, and is defined by $\frac{x - \min{(x)}}{\max{(x)} - min{(x)}}$.
+  Firstly, the outbreak points for ${year}$ are taken, and a raster $dist_{rast}$ is computed where the value of each pixel is inversely proportional to their distance from the closest outbreak according to $h = \exp({-m\norm{(ad^{x})}})$, where $d$ is the closest distance to an outbreak point returned for each pixel by `terra`'s `distance` function. $m$ $a$ and $x$ are scaling parameters for which various values are tested: $m$ scales the largest negative value that $e$ can be raised to, $a$ increases the area underneath the curve close to the $y$ axis by "lifting" the graph upwards, and $x$ disproportionately increases the value returned for pixels extremely close to the closest outbreak point. Effectively, $m$ and $a$ scale the overall range of an outbreak's effect, while $x$ scales the distance where the outbreak will be the most devastating. The $\norm{}$ function represents the uniform scaling, or normalization, of the raster's cell values to between 0.0 and 1.0, and is defined by $\frac{x - \min{(x)}}{\max{(x)} - min{(x)}}$.
 
-  Before describing how the estimated infected population raster is calculated, it is imperative to define several other rasters as well. The susceptible population density raster, $dens_{rast}$, wherein each cell's value represents the density of susceptible individuals within any given cell. The initial value of $dens_{rast}$ is the population density in 1300AD. The susceptible population _density_ raster is recalculated each year based upon $S_{rast}$, the susceptible population _count_ raster. The initial value of this raster is the population count in 1300AD.
+  Before describing how the estimated infected population raster is calculated, it is imperative to define several other rasters as well. The susceptible population density raster, $dens_{rast}$, wherein each cell's value represents the density of susceptible individuals within any given cell. The initial value of $dens_{rast}$ is the population density in 1300AD. The susceptible population *density* raster is recalculated each year based upon $S_{rast}$, the susceptible population *count* raster. The initial value of this raster is the population count in 1300AD.
 
   Next, the infected population estimate raster $I$ is calculated, by $s(dens_{rast})(dist_{rast})$. The density and distance rasters are multiplied together, cell-by-cell, as well as by a normalized scalar parameter, $s$, representing the maximal yearly saturation percentage within susceptible individuals; this value is tested multiple times between 0.0 and 1.0. $s$ exists as according to current scholarship, even the cities hit most severely with plague only lost at most 50-80% of their populations [@CohnEpidemiologyBlackDeath2008; @DorseyArmstrongHowPolandMilan2021; @Cesana.etalOriginEarlySpread2017; @Roosen.CurtisLightTouchBlack2019; @Jedwab.etalPandemicsPlacesPopulations2019]. While it may be intuitive, it still must be noted that $I$ is instantaneous, and does not represent cumulative infections, only the number of infections in the outbreak year currently being analysed.
 It is also crucial to note that $dens_{rast}$ is not normalized, thus cells with a high density of susceptible individuals will be struck most severely with plague. However, because the susceptible population density is adjusted each iteration, this is seen most acutely when the area experiences its first outbreak. Additionally of note is that the value of $dist_{rast}$ approaches 0 at an exponential rate with distance to a recorded outbreak, allowing the progression of the disease to roughly follow the point pattern present in the outbreaks dataset, and for the countryside to be less severely affected than denser, more urban areas where outbreaks are typically recorded.
@@ -228,12 +229,12 @@ It is also crucial to note that $dens_{rast}$ is not normalized, thus cells with
   
   Following this, the newly modified $S$ is utilized to create a new $dens_{rast}$ for the next iteration. However, this is not straightforward: even though the data is unprojected, the ellipsoid indexed by the longitude and latitude coordinates is not perfectly spherical and is instead flatter about the poles. Thus, some cells represent a larger actual area than others, and the true geographic area represented needs to be determined so that the population density is not skewed positively towards flattened areas. Luckily, `terra`'s `cellSize` is a quick and effective way to obtain the true geographic size of a raster cell, provided that it is sufficiently small. However, this alone still does not perfectly convert population to population density, as the HYDE uses other sources in addition to population count to gauge population density. As a result, we also need to offset each population count-to-density conversion by the difference between 1300AD population density calculated using only 1300AD population count, and the 1300AD HYDE estimate for population density. Put mathematically, the offset raster is calculated through $b = \frac{count_0}{size_0} - dens_0$, where $count_0$ is the population count raster in 1300AD, $size_0$ represents the raster of cell sizes obtained with `terra` for all cells in that raster, and $dens_0$ represents the population density estimate for 1300AD. This offset raster only needs to be evaluated one time, for the year 1300AD, as it acts as a global adjustment to each subsequent year's $dens_{rast}$ values. Further, the function used to convert population count to population density could be expressed as $\frac{count}{size}-b$, where $count$ is the population count raster, $size$ is the calculated raster containing $counts$ cell sizes, and $b$ is the previously-calculated offset.
   
-  With all this complete, $I$ is multiplied by $mortality$ in order to approximate the number of those infected who will die; for this simulation, the scalar value $0.8 = mortality$ is used. This 80% mortality rate is based upon various estimates of the average contemporary mortality across all forms of the disease [@Pechous.etalPneumonicPlagueDarker2016; @EvansPneumonicPlagueIncidence2022; @Dean.etalHumanEctoparasitesSpread2018; @TotaroSufferingParadiseBubonic2005; @CohnEpidemiologyBlackDeath2008]. $mortality$ was initially tested with multiple values, but as it seemed have very little impact upon the result, and greatly expanded the search space, it was instead set to a scalar value to save computation time. In any case, the resulting raster, $D$, represents only the dead individuals from the outbreak year currently being analysed, _not_ the cumulative number of deaths over the entire epidemic, as it is based on the instantaneous $I$. All yearly $D$ rasters must be summed at the end of recursion in order to compute a total estimate. $R$, or the raster of recovered individuals for the year, is also calculated by $I - D$.
+  With all this complete, $I$ is multiplied by $mortality$ in order to approximate the number of those infected who will die; for this simulation, the scalar value $0.8 = mortality$ is used. This 80% mortality rate is based upon various estimates of the average contemporary mortality across all forms of the disease [@Pechous.etalPneumonicPlagueDarker2016; @EvansPneumonicPlagueIncidence2022; @Dean.etalHumanEctoparasitesSpread2018; @TotaroSufferingParadiseBubonic2005; @CohnEpidemiologyBlackDeath2008]. $mortality$ was initially tested with multiple values, but as it seemed have very little impact upon the result, and greatly expanded the search space, it was instead set to a scalar value to save computation time. In any case, the resulting raster, $D$, represents only the dead individuals from the outbreak year currently being analysed, *not* the cumulative number of deaths over the entire epidemic, as it is based on the instantaneous $I$. All yearly $D$ rasters must be summed at the end of recursion in order to compute a total estimate. $R$, or the raster of recovered individuals for the year, is also calculated by $I - D$.
 
-  The algorithm is run until final year is reached. Then, all rasters $D$ and $R$ are summed respectively to $D_{total}$ and $R_{total}$, estimates for the total number of deaths and recoveries per cell over the entire 14th century. The correlation between these approximations and the values estimated in the HYDE are also computed. In the case of the estimated death number, correlation is measured against the inversely-signed population difference raster, as deaths in that raster are represented by a negative number, but this model can only produce positive numbers. The correlation between the population count in 1400AD and the model's final population estimate raster $A$, which is computed by $A = S_{final} + R_{total}$, is also tracked. The grid search is run to completion, with all unique combinations of the $m$, $a$, $x$, and $s$ parameters, and the submodel correlations between expected and actual values for both deaths and population are selected and displayed, visible in Figure \@ref(fig:top_correlation_chart_D), and in Figure \@ref(fig:top_correlation_chart_A). The predicted 1400AD rasters for deaths and remaining population are Figure \@ref(fig:best_model_result_D) and Figure \@ref(fig:best_model_result_A), respectively, with the HYDE estimates side-by-side for comparison. Additionally, snapshots of key years of the epidemic as predicted in the best deaths submodel are also included in Figure \@ref(???) within the non-technical summary.
+  The algorithm is run until final year is reached. Then, all rasters $D$ and $R$ are summed respectively to $D_{total}$ and $R_{total}$, estimates for the total number of deaths and recoveries per cell over the entire 14th century. The correlation between these approximations and the values estimated in the HYDE are also computed. In the case of the estimated death number, correlation is measured against the inversely-signed population difference raster, as deaths in that raster are represented by a negative number, but this model can only produce positive numbers. The correlation between the population count in 1400AD and the model's final population estimate raster $A$, which is computed by $A = S_{final} + R_{total}$, is also tracked. The grid search is run to completion, with all unique combinations of the $m$, $a$, $x$, and $s$ parameters, and the submodel correlations between expected and actual values for both deaths and population are selected and displayed, visible in Figure \@ref(fig:topCorrelationChartD), and in Figure \@ref(fig:topCorrelationChartA). The predicted 1400AD rasters for deaths and remaining population are Figure \@ref(fig:bestModelResultD) and Figure \@ref(fig:bestModelResultA), respectively, with the HYDE estimates side-by-side for comparison. Additionally, snapshots of key years of the epidemic as predicted in the best deaths submodel are also included in Figure \@ref(fig:bestModelResultA) THIS IS WRONG within the non-technical summary.
 
 
-```{r death_raster, echo=FALSE, fig.cap="The Population Difference Raster, or \"Death Raster\""}
+```{r deathRaster, echo=FALSE, fig.cap="The Population Difference Raster, or 'Death Raster'", out.height='80%'}
 tm_shape(basemap) + tm_rgb(alpha = 0.8) + tm_shape(death_raster, raster.downsample=FALSE) + tm_raster(alpha=0.7,
                                                                   breaks=c(-51200.0
                                                                           -25600.0,
@@ -260,14 +261,14 @@ tm_shape(basemap) + tm_rgb(alpha = 0.8) + tm_shape(death_raster, raster.downsamp
 ```
 
 
-## Results
+# Results
 
-### Preliminary Work Results
+## Preliminary Work Results
 
-  While the resultant models themselves are the key focus of this report, the preliminary work also yielded some interesting results worthy of discussion. The focal correlation plot generated for Figure \@ref(fig:focal_correlation_between_deaths_and_popd) is primarily reassuring due to the large swathe of reasssuringly negatively correlated space, however the areas which are positively correlated are also interesting and point to additional conclusions that can be gleaned from the data. Major cities of such as Paris, Berlin, and Vienna are counterintuitively strongly _positively_ correlated with population difference. In other words: despite being dense urban areas, they seemed to experience relative growth in contrast to other major cities of the time which were strongly negatively correlated, like London, Munich, or Milan. This could point to a pattern of migration into urban areas from less-affected rural communities as a result of the severe and abrupt population shock [@DorseyArmstrongHowPolandMilan2021; @Siuda.SundeDiseaseDemographicDevelopment2021; @Jedwab.etalPandemicsPlacesPopulations2019]. This phenomenon is of immense interest to anthropologists, especially those interested in human movement and the dramatic societal and cultural shifts that manifested in the regions where this positive correlation is present shortly after the most devastating years of plague had passed @A.D.A.M.Inc.Plague. Unfortunately, the methods utilized in this paper are not robust enough to make predictions about this phenomenon, though it presents a promising avenue for future work. 
+  While the resultant models themselves are the key focus of this report, the preliminary work also yielded some interesting results worthy of discussion. The focal correlation plot generated for Figure \@ref(fig:focalCorrelationBetweenDeathsAndPopd) is primarily reassuring due to the large swathe of reasssuringly negatively correlated space, however the areas which are positively correlated are also interesting and point to additional conclusions that can be gleaned from the data. Major cities of such as Paris, Berlin, and Vienna are counterintuitively strongly *positively* correlated with population difference. In other words: despite being dense urban areas, they seemed to experience relative growth in contrast to other major cities of the time which were strongly negatively correlated, like London, Munich, or Milan. This could point to a pattern of migration into urban areas from less-affected rural communities as a result of the severe and abrupt population shock [@DorseyArmstrongHowPolandMilan2021; @Siuda.SundeDiseaseDemographicDevelopment2021; @Jedwab.etalPandemicsPlacesPopulations2019]. This phenomenon is of immense interest to anthropologists, especially those interested in human movement and the dramatic societal and cultural shifts that manifested in the regions where this positive correlation is present shortly after the most devastating years of plague had passed @A.D.A.M.Inc.Plague. Unfortunately, the methods utilized in this paper are not robust enough to make predictions about this phenomenon, though it presents a promising avenue for future work. 
 
 
-```{r focal_correlation_between_deaths_and_popd, echo=FALSE, fig.cap='Pop. Dens. and Pop. Diff. Spatial Focal Correlation'}
+```{r focalCorrelationBetweenDeathsAndPopd, echo=FALSE, fig.cap='Pop. Dens. and Pop. Diff. Spatial Focal Correlation', out.height='80%'}
 death_on_popd = rast(list(ad1300_popd_rast, death_raster))
 crs(death_on_popd) = unprojected_crs
 correlation = focalPairs(death_on_popd, w = 3, cor) #WARNING: this may crash if your libraries are not up-to-date!
@@ -283,7 +284,7 @@ tm_shape(basemap) + tm_rgb(alpha=0.8) + tm_shape(correlation, raster.downsample=
 ```
 
 
-```{r predicted_intensity_through_rhohat, echo=FALSE, fig.cap='Nonparametric Estimate of Intensity as a Function of Pop. Dens.'}
+```{r predictedIntensityThroughRhohat, echo=FALSE, fig.cap='Nonparametric Estimate of Intensity as a Function of Pop. Dens.', out.height='80%'}
 #first we gotta project the data. I'm choosing ED1950 Albers, as it covers the target area decently
 death_raster_proj = death_raster %>%
                     terra::project(projected_crs)
@@ -318,7 +319,7 @@ tm_shape(basemap) + tm_rgb(alpha=0.8) + tm_shape(predrast, raster.downsample=FAL
 ```
 
 
-```{r run_simulations, echo=FALSE, include=FALSE}
+```{r runSimulations, echo=FALSE, include=FALSE}
 #scaling for raster cells is spatially warped:
 popc_cell_size = terra::cellSize(ad1300_popc_rast, unit='km')
 #cell size shouldn't change, so we only need to do this one time
@@ -429,18 +430,18 @@ for (trial in split(params, seq(nrow(params)))) {
 ```
 
 
-### Deterministic Model Results
+## Deterministic Model Results
 
   Despite its relative simplicity, the deterministic models perform extremely well on this data. With a very strong correlation coefficient between the submodel-estimated population and that estimated by the HYDE, we can be fairly confident that at least against the HYDE 3.2 data, predictions are fairly accurate. The death submodel estimation, while slightly less correlated with the HYDE prediction, is still decently accurate. However, the system's overreliance on self-verification using those estimates is also a significant weakness of the system; in the future, it would be prudent to test against other estimates of population and population decline, even simply testing the population of cities against what is reported by other historical sources. Any inaccuracy in the initial population or density, for example, could lead to sweeping inaccuracies in the predicted results.
   
-  It is interesting that the preferred set of hyperparameters differs between the population count and deaths. This may also be the result of a dearth of adequate parameters in the system. Because deaths and surviving population are two sides of the same coin, linked mathematically through the system of equations $A = R + S, R = I - D, D = mortality \times I$, it seems fairly intuitive that adding at the very least a hyperparameter for $mortality$ instead of having it as a constant value would likely help to remedy this issue. Furthermore, some plague models [@Dean.etalHumanEctoparasitesSpread2018; @Sichone.etalEstimatingBasicReproduction2020; Nguyen.etal2017PlagueOutbreak2018] add differing mortality and infection rates for various forms of the disease, as well as the capability to transition between these states. Factoring that information in would certainly would be a key step towards more accurate and realistic modelling. Unfortunately, doing so would preclude the continued usage of grid search to tune the parameters, as it would necessitate the addition of a huge swathe of new hyperparameters, likely skyrocketing the required computational time for this method far, far into the realm of infeasability.
+  It is interesting that the preferred set of hyperparameters differs between the population count and deaths. This may also be the result of a dearth of adequate parameters in the system. Because deaths and surviving population are two sides of the same coin, linked mathematically through the system of equations $A = R + S, R = I - D, D = mortality \times I$, it seems fairly intuitive that adding at the very least a hyperparameter for $mortality$ instead of having it as a constant value would likely help to remedy this issue. Furthermore, some plague models [@Dean.etalHumanEctoparasitesSpread2018; @Sichone.etalEstimatingBasicReproduction2020; @Nguyen.etal2017PlagueOutbreak2018] add differing mortality and infection rates for various forms of the disease, as well as the capability to transition between these states. Factoring that information in would certainly would be a key step towards more accurate and realistic modelling. Unfortunately, doing so would preclude the continued usage of grid search to tune the parameters, as it would necessitate the addition of a huge swathe of new hyperparameters, likely skyrocketing the required computational time for this method far, far into the realm of infeasability.
   
-  As population increases, both correlation plots seem to diverge into two pathways, one in which my estimates are too high, and one in which they are too low. This seems to indicate that the current set of parameters this system applies to the data is not adequate, and that there are other factors which are unaccounted for. Because the largest factor influencing the magnitude of infections in any given cell is population density, and because this effect seems to intensify as the magnitude of the prediction increases, modifying the effect or values of the yearly $dens_{rast}$ may be dampen this divergence. Indeed, in this system $dens_{rast}$ is considered fairly directly as a proxy for the number of contacts between individuals (the crucial factor in how many individuals one person may infect). This may not be a valid assumption to make, and instead first predicting the frequency and magnitude of contacts _using_ the $dens_{rast}$ as performed by Hu et al. @Hu.etalScalingContactRates2013 (or perhaps even a slightly simpler model) may lead to far more precise predictions.
+  As population increases, both correlation plots seem to diverge into two pathways, one in which my estimates are too high, and one in which they are too low. This seems to indicate that the current set of parameters this system applies to the data is not adequate, and that there are other factors which are unaccounted for. Because the largest factor influencing the magnitude of infections in any given cell is population density, and because this effect seems to intensify as the magnitude of the prediction increases, modifying the effect or values of the yearly $dens_{rast}$ may be dampen this divergence. Indeed, in this system $dens_{rast}$ is considered fairly directly as a proxy for the number of contacts between individuals (the crucial factor in how many individuals one person may infect). This may not be a valid assumption to make, and instead first predicting the frequency and magnitude of contacts *using* the $dens_{rast}$ as performed by Hu et al. @Hu.etalScalingContactRates2013 (or perhaps even a slightly simpler model) may lead to far more precise predictions.
   
-  Given the relative accuracy of the models, especially in higher-density areas, attention must be drawn instead to areas where the models lack accuracy. Ireland, Brittany, and particularly Southeastern Europe are all lacking some of the definition present in the HYDE 3.2 estimates. The deaths submodel in particular seems to have an excessively light hand in some rural areas, and an excessively heavy hand in some urban areas. While the latter point in particular may be explained easily by migration, all three points together suggest that there is an even larger current underlying issue. The most obvious conclusion would be that the relationship between the magnitude of infection in a cell depends on additional factors more complicated than simple $scalar\times{density}\times{distance}$. Some outliers, such as the grossly under-predicted point in Figure \@ref(fig:top_correlation_chart_A) also suggest that the formula for $I$ is inadequate, and that a wider range of parameters encapsulating socioeconomic phenomenon such as the relationships between urban centers, and between these urban centers and their rural surroundings. Of course, as this data models the real world, and the potential that crucial data is lost to time, perfect accuracy may of course be a futile pursuit.
+  Given the relative accuracy of the models, especially in higher-density areas, attention must be drawn instead to areas where the models lack accuracy. Ireland, Brittany, and particularly Southeastern Europe are all lacking some of the definition present in the HYDE 3.2 estimates. The deaths submodel in particular seems to have an excessively light hand in some rural areas, and an excessively heavy hand in some urban areas. While the latter point in particular may be explained easily by migration, all three points together suggest that there is an even larger current underlying issue. The most obvious conclusion would be that the relationship between the magnitude of infection in a cell depends on additional factors more complicated than simple $scalar \times{density} \times{distance}$. Some outliers, such as the grossly under-predicted point in Figure \@ref(fig:topCorrelationChartA) also suggest that the formula for $I$ is inadequate, and that a wider range of parameters encapsulating socioeconomic phenomenon such as the relationships between urban centers, and between these urban centers and their rural surroundings. Of course, as this data models the real world, and the potential that crucial data is lost to time, perfect accuracy may of course be a futile pursuit.
 
 
-```{r top_correlation_chart_A, echo=FALSE, out.height='80%', fig.cap='Most Correlated Population Model Estimated vs. Actual Plot'}
+```{r topCorrelationChartA, echo=FALSE, out.height='80%', fig.cap='Most Correlated Population Model Estimated vs. Actual Plot'}
 most_corr_idx_A = which.max(correlations_A)
 plot(terra::values(final_alive[[most_corr_idx_A]]) ~ terra::values(ad1400_popc_rast),
      xlab = 'Actual Population',
@@ -451,7 +452,7 @@ legend("topleft", legend=paste0('Model #', most_corr_idx_A,
 ```
 
 
-```{r best_model_result_A, echo=FALSE, fig.cap='Comparison of 1400AD Population Estimate Rasters', fig.height = 27, fig.width = 20}
+```{r bestModelResultA, echo=FALSE, fig.cap='Comparison of 1400AD Population Estimate Rasters', fig.height = 27, fig.width = 20}
 a_coll = list(tm_shape(basemap) +
   tm_rgb(alpha=0.8) +
   tm_shape(final_alive[[most_corr_idx_A]], raster.downsample=F) +
@@ -507,7 +508,7 @@ tmap_arrange(a_coll[[1]], a_coll[[2]], ncol=1)
 ```
 
 
-```{r top_correlation_chart_D, echo=FALSE, fig.cap='Most Correlated Death Model Estimated vs. Actual Plot', out.height='80%'}
+```{r topCorrelationChartD, echo=FALSE, fig.cap='Most Correlated Death Model Estimated vs. Actual Plot', out.height='80%'}
 most_corr_idx_D = which.max(correlations_D)
 plot(terra::values(final_dead[[most_corr_idx_D]]) ~ terra::values(-death_raster),
      xlab = 'Actual Population Decrease',
@@ -518,7 +519,7 @@ legend("topleft", legend=paste0('Model #', most_corr_idx_D,
 ```
 
 
-```{r best_model_result_D, echo=FALSE, fig.cap='Comparison of 1400AD Population Estimates', fig.height = 27, fig.width = 20}
+```{r bestModelResultD, echo=FALSE, fig.cap='Comparison of 1400AD Population Estimates', fig.height = 27, fig.width = 20}
 d_coll = list(tm_shape(basemap) +
               tm_rgb(alpha=0.8) +
               tm_shape(final_dead[[most_corr_idx_D]], raster.downsample=F) +
@@ -575,8 +576,13 @@ tmap_arrange(d_coll[[1]], d_coll[[2]], ncol=1)
 ```
 
 
-## References
+# Summary for Non-Technical Audiences
 
 
-<br>\
+
+
+# References
+
+
+<br>
 <div id="refs"></div>
